# amaneshi

./: .gitignore  CMakeLists.txt  README.md  SCRIPT_README.txt  SETUP LOG.txt  SETUP README.txt  amaneshi.vcxproj  amaneshi.vcxproj.filters  amns-cmakegenerator.sh  genCMake-all-subfolders.sh  log.txt  rundemo.sh  runlatest.sh
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Engine_3D.hpp  genCMake-engine.sh  log.txt
Engine/Config/: CMakeLists.txt
Engine/Config/Private/: Dummy.cpp  Initialize_GLFW.cpp  Initialize_OpenGL.cpp
Engine/Config/Public/: Config_Core.hpp  External_Libraries.hpp
Engine/Config_External/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Graphics/: CMakeLists.txt
Engine/Core/Graphics/Private/: CMakeLists.txt  Messy_OpenGL.hpp
Engine/Core/Input/: CMakeLists.txt
Engine/Core/Input/Private/: Input_Interface.cpp
Engine/Core/Renderer/: CMakeLists.txt
Engine/Core/Thread/: CMakeLists.txt
Engine/Core/Window/Public copy/: Graphics_Window.hpp
Engine/Game/: CMakeLists.txt
Engine/Game/Camera/: CMakeLists.txt
Engine/Game/Object/: CMakeLists.txt
Engine/Game/World/: CMakeLists.txt
Engine/Utility/: CMakeLists.txt
Engine/Utility/File/: CMakeLists.txt
Engine/Utility/Math/: CMakeLists.txt
Engine/Utility/Math/Public/: Math_Position.hpp
Engine/Utility/Time/: CMakeLists.txt
Engine/Utility/Time/Public/: CMakeLists.txt
Engine/reminderforlater/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/00 Hello CMake/: CMakeLists.txt  main.cpp
Examples/00 Hello CMake/Public/: printer.hpp
Examples/01 Hello World/: CMakeLists.txt
Examples/02 Stress Test/: CMakeLists.txt
Games/00 Hello CMake/Public/: printer.hpp
Test/: TODO.txt
amaneshi.xcodeproj/: project.pbxproj
amaneshi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
amaneshi.xcodeproj/project.xcworkspace/xcuserdata/davidsicongzhou.xcuserdatad/: UserInterfaceState.xcuserstate
amaneshi.xcodeproj/xcuserdata/davidsicongzhou.xcuserdatad/xcschemes/: xcschememanagement.plist
old/Core copy/: CMakeLists.txt
old/Core copy/Context/Private/: Window_GLFW.cpp  Window_GLFW.hpp
old/Core copy/Context/Private copy/: Graphics_Interface.cpp  Graphics_Window.cpp  Window_GLFW.cpp  Window_GLFW.hpp
old/Core copy/Context/Private copy/depreciated OpenGLShaders/: HelloWorld.vs
old/Core copy/Context/Private/depreciated OpenGLShaders/: OldPolygonShader.cpp  Shader Factory README.txt  SphereShader.cpp
old/Core copy/Input/Public/: Input_Interface.hpp
old/Core copy/Thread/Private/: Thread_Queue.cpp
old/Core copy/Thread/Public/: Thread_Queue.hpp
src/: CMakeLists.txt  Choose_Game.h  HelloWorld.cpp  Input.cpp  Input.h  fpscounter.hpp  glfwtest.c  glfwtest.cpp  log.txt  main.cpp  oldlog
src/0 Hello World/: HelloWorld.cpp
src/0 old stuff/: Choose_Game.h  Engine_HelloWorld.hpp
src/0 old stuff/02 Not Air Hockey/: NotAirHockey.cpp
src/0 old stuff/03 Go/: Go.cpp
src/0 old stuff/04 Of Mice and Swords/: MiceAndSwords.cpp
src/00 Hello CMake/: CMakeLists.txt  main.cpp
src/00 Hello CMake/Private/: printer.cpp  private.hpp
src/01 Hello World/: HelloWorld.cpp
src/02 Not Air Hockey/: NotAirHockey.cpp
src/02 spherestress/: spherestress.cpp
src/03 Go/: Go.cpp
src/04 Of Mice and Swords/: MiceAndSwords.cpp
src/1 Not Air Hockey/: CircleClicking.cpp
src/2 Go/: Go.cpp
src/Amaneshi/: Amaneshi.hpp  Debug_Log.hpp  Debug_Test.hpp  Demo.cpp  Engine_3D.hpp  Engine_Debug.hpp  Engine_Public.hpp  Engine_Standard.cpp  Engine_Standard.hpp  Engine_Temp.hpp  External_Modes.hpp  Game_Component.hpp  Game_Object.hpp  Game_Physics.hpp  Game_Renderer.hpp  Game_Updatable.hpp  Game_World.hpp  Graphics_GLFW.cpp  Graphics_GLFW.hpp  Graphics_Interface.cpp  Graphics_Interface.hpp  Input_GLFW.cpp  Input_GLFW.hpp  Input_Interface.hpp  Thread_Job.hpp  Thread_Queue.cpp  Thread_Queue.hpp  Thread_Task.cpp
src/Amaneshi/0 Debug/: Debug_Log.hpp  Debug_Test.hpp
src/Amaneshi/Component/: Collider.cpp  Collider.hpp  Physics.hpp  Renderer.hpp
src/Amaneshi/Component/Colliders/: SphereCollider.cpp  SphereCollider.hpp
src/Amaneshi/Internal/: Math_Position.cpp  Math_Position.hpp  Math_Rotation.hpp  Math_Vector.cpp  Math_Vector.hpp  Thread_SingleRender.hpp  Thread_Task.cpp  Thread_Task.hpp  Time_FPS.hpp  Type_Updatable.hpp
src/Amaneshi/Math/: Math_Position.hpp  Math_Rotation.hpp
src/Amaneshi/Object/: Camera.hpp  Sphere.cpp  Sphere.hpp
src/Amaneshi/System/: Thread_Job.hpp  Thread_Queue.cpp  Thread_Task.hpp
src/Amaneshi/World/: KDTree.hpp  Subspace.hpp  Thread_Task.cpp
src/engine/: CMakeLists.txt  Demo.cpp  glfwtest.c
src/engine/Core/: CMakeLists.txt
src/engine/Core/Graphics/: CMakeLists.txt
src/engine/Core/Graphics/Private/: Messy_GLFW.hpp
src/engine/Game/: CMakeLists.txt
src/engine/Game/Object/: CMakeLists.txt
src/engine/Game/World/Public/: Game_World.hpp
src/engine/Graphics/: CMakeLists.txt
src/engine/Object/: Object_Camera.hpp
src/engine/Utility/: CMakeLists.txt
src/engine/Utility/File/: CMakeLists.txt
src/engine/Utility/Public/: Math_Vector.hpp
src/engine/Utility/Time/: CMakeLists.txt  Time_Clock.hpp
src/old/: GraphicsV1.hpp  Utility.cpp  Utility.hpp
src/old code ignore me/: Input.cpp  main_old.cpp
